--- a/css/responsive-style.css
+++ b/css/responsive-style.css
@@ -54,6 +54,10 @@ h3{
 }
 @media (max-width : 575.5px){
 /* Custom */
+/* .banner_wrapper .banner-content h2::after{
+    left:40%;
+} */
+
 .footer_wrapper form{
     display: block;
     width:100%;
@@ -63,6 +67,12 @@ h3{
     max-width: 100%;
     height: auto;
 }
+.header_wrapper .navbar-brand img{ 
+    max-width: 2.5rem;
+    height:auto;
+
+}
+
 
 }
 @media (max-width : 390px){
@@ -77,13 +87,13 @@ h3{
 }
 
 .header_wrapper .navbar-brand img{ 
-    max-width: 3.5rem;
+    max-width: 2.5rem;
     height:auto;
 
 }
 
 .header-scrolled {
-    height: 11%;
+    height: 10%;
 }
 .header_wrapper .navbar{
     padding: 0.2rem 0;
